testsuite/tests/interpreter_errors/invalid_list_index/test.out
main.adb
script.lkql:2:8: error: Invalid index:  999999
2 | print (p[999999])
  |        ^^^^^^^^^ 

